--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    
 </head>
 
 <body>
 <h2> Sonos Web App</h2>
 
-    {for spk in speakers}
-    
-    <p></p>
+    {% for spk in speakers %}
+        <p>{{  spk['name']  }} >>> vol: {{  spk['volume']  }}</p>
+    {% endfor %}
+    <a href="http://127.0.0.1:5000?vol=m">Baisser le son</a>
+
+
 
 </body>
-
-
 
 </html>
